metadata/force-app/main/default/objects/RFP_Team__c/RFP_Team__c.object-meta.xml
<CustomObject>
    <label>RFP Team</label>
    <nameField>
        <displayFormat>RFPTM = {00000}</displayFormat>
        <label>RFP Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>