metadata/force-app/main/default/objects/RFP_Team__c/fields/Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Member_Role__c</fullName>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Support Member</fullName>
            </value>
            <value>
                <fullName>Account Team Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>