metadata/force-app/main/default/objects/RFP_Team__c/fields/RFP__c.field-meta.xml
<CustomField>
    <fullName>RFP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFP</label>
    <referenceTo>RFP__c</referenceTo>
    <relationshipLabel>RFP Teams</relationshipLabel>
    <relationshipName>RFP_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>