metadata/force-app/main/default/objects/RFP_Team__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFP_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>